--- a/app.css
+++ b/app.css
@@ -1,14 +1,46 @@
 html {
-    font-family: monospace;
-    font-size: large;
+  font-family: monospace;
+  font-size: large;
 }
 
 /* Page layout */
 .top-structure {
-    display: grid;
-    grid-template-columns: 1fr 3fr;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
 }
 
 .top-structure > * {
-    margin: 1rem;
+  margin: 1rem;
+}
+
+.top-structure > *:first-child {
+  border-right: 1px solid black;
+}
+
+/* Menu */
+.menu {
+  padding: 0;
+}
+
+.menu li {
+  cursor: pointer;
+  list-style-type: none;
+  padding: 0.5rem;
+}
+
+.menu li:hover {
+  background-color: lightgrey;
+}
+
+/* Card */
+.card {
+  border: 1px solid black;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 1rem;
+  width: max-content;
+}
+
+.card:hover {
+  background-color: lightgrey;
 }
